<resources>
    <string name="app_name">LEEFO Budget Application</string>
    <string name="Navigation_Title_1">Home</string>
    <string name="Navigation_title_2">Budget</string>
    <string name="Navigation_title_3">More</string>
    <string name="Total_Income_title">INCOME</string>
    <string name="Total_Expense_title">EXPENSES</string>
    <string name="Balance_title">BALANCE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="New_Transaction">New Transaction</string>
    <string name="Edit_Transaction">Edit Transaction</string>
    <string name="New_Category">New Category</string>
    <string name="Edit_Category">Edit Category</string>
    <string name="Manage_Categories">Manage categories</string>
    <string name="current_streak">Current streak</string>
    <string name="record_streak">Record streak</string>
    <string name="streak_title">Spending streak</string>
    <string name="Edit_Budget">Edit</string>
    <string name="streak_text">Earn a streak by spending less than you do on average daily.</string>
</resources>