<?xml version="1.0" encoding="utf-8"?>
<!--
Layout Resource file used by a BottomNavigationView in activity_main.xml
Author: Emelie Edberg
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/Navigation_Title_1" />
    <item
        android:id="@+id/nav_budget"
        android:icon="@drawable/ic_baseline_star_half_24"
        android:title="@string/Navigation_title_2" />
    <item
        android:id="@+id/nav_streak"
        android:icon="@drawable/ic_baseline_bolt_24"
        android:title="Streak" />

    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_baseline_more_horiz_24"
        android:title="@string/Navigation_title_3" />

</menu>