<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@color/purple_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@color/purple_light"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6"
        tools:layout_editor_absoluteX="0dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_streak"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="@+id/currentStreak"
        app:layout_constraintStart_toStartOf="@+id/streakImage"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <ImageView
        android:id="@+id/streakImage"
        android:layout_width="60dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/currentStreak"
        app:layout_constraintEnd_toStartOf="@+id/currentStreak"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/recordStreak"
        app:layout_constraintTop_toTopOf="@+id/currentStreak"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/lightning" />

    <TextView
        android:id="@+id/currentStreak"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginEnd="75dp"
        android:gravity="center|left"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/streakImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/recordStreak"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginEnd="10dp"
        android:gravity="center|left"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/streakImage"
        app:layout_constraintEnd_toStartOf="@+id/streakImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/longestStreakImage"
        app:layout_constraintTop_toTopOf="@+id/streakImage"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/longestStreakImage"
        android:layout_width="60dp"
        android:layout_height="75dp"
        android:layout_marginStart="75dp"
        app:layout_constraintBottom_toBottomOf="@+id/recordStreak"
        app:layout_constraintEnd_toStartOf="@+id/recordStreak"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recordStreak"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fire" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_streak"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/recordStreak"
        app:layout_constraintStart_toStartOf="@+id/longestStreakImage"
        app:layout_constraintTop_toBottomOf="@+id/longestStreakImage" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/streak_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" />

    <TextView
        android:id="@+id/average_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="200"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout6"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout6" />

    <TextView
        android:id="@+id/today_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="200"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout7"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout7" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Daily average:"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout6" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Today's expenses:"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout7" />

</androidx.constraintlayout.widget.ConstraintLayout>